--- a/netflix-frontend/tsconfig.json
+++ b/netflix-frontend/tsconfig.json
@@ -18,7 +18,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": true,
     "lib": [
       "ES2022",
       "dom"
