--- a/netflix-backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/netflix-backend/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -23,5 +23,10 @@
     "name": "s3.bucketName.screenshot",
     "type": "java.lang.String",
     "description": "A description for 's3.bucketName.screenshot'"
+  },
+  {
+    "name": "s3.bucketName.acteur",
+    "type": "java.lang.String",
+    "description": "A description for 's3.bucketName.acteur'"
   }
 ]}
